# brightway2-data

./: .cruft.json  .gitignore  .hgignore  .readthedocs.yml  CHANGES.md  CHANGES.txt  CONTRIBUTING.md  LICENSE  MANIFEST.in  README  README.md  README.rst  appveyor.yml  azure-pipelines.yml  bitbucket-pipelines.yml  noxfile.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-test.txt  requirements.txt  setup.cfg  setup.py  test_migration.py  test_script.py
.github/workflows/: github_action_trigger_submodule_pull_reusable.yml  python-package-deploy.yml  python-package-test.yml  python-test.yml
bw2data/: VERSION  __init__.py  _config.py  colors.py  compat.py  configuration.py  data_store.py  database.py  database_parameters.py  db.py  errors.py  fatomic.py  filesystem.py  ia_data_store.py  logs.py  meta.py  method.py  parameters.py  presamples.py  project.py  proxies.py  query.py  revisions.py  serialization.py  signals.py  snowflake_ids.py  sqlite.py  subclass_mapping.py  tests.py  units.py  updates.py  upgrades.py  utils.py  validate.py  version.py  weighting_normalization.py
bw2data/backends/: __init__.py  base.py  iotable.py  lcia.py  proxies.py  scenarios.py  schema.py  typos.py  utils.py  wurst_extraction.py
bw2data/backends/blitz/: __init__.py  database.py  documents.py  result_dict.py
bw2data/backends/codernitydb/: __init__.py  database.py  ds_indices.py  exc_indices.py
bw2data/backends/default/: database.py
bw2data/backends/iotable/: __init__.py  backend.py  proxies.py  storage.py
bw2data/backends/json/: __init__.py  database.py  mapping.py  proxies.py  schema.py  sync_json_dict.py
bw2data/backends/peewee/: __init__.py  database.py  fields.py  new_sql.sql  proxies.py  schema.py  utils.py
bw2data/backends/single_file/: __init__.py  database.py  proxies.py
bw2data/graph/: __init__.py  base.py  proxies.py  schema.py
bw2data/io/: __init__.py  bw2package.py  export_gexf.py  import_comments.py  import_ecospold.py  import_ecospold2.py  import_method.py  import_simapro.py  matlab.py  remapping.py  snapshot.py
bw2data/proxies/: __init__.py  activity.py  array.py  base.py  exchange.py  sparse.py
bw2data/revisions/: __init__.py  interface.py  schema.py
bw2data/search/: __init__.py  indices.py  schema.py  search.py
bw2data/tests/: __init__.py  array.py  base.py  config.py  data_store.py  database.py  database_parameters.py  fixtures.py  geo.py  ia.py  json_database.py  packaging.py  query.py  search.py  serialization.py  simapro.py  sparse.py  updates.py  utils.py  validation.py
bw2data/tests/fixtures/: __init__.py  simapro_reference.py
bw2data/tests/fixtures/simapro/: empty.txt  metadata.txt  missing.txt  multioutput.txt  simple.txt
ci/appveyor/: install.ps1
dev/: Export-biosphere.ipynb  Speed tests DataFrame creation.ipynb  fts5_bw_dev.ipynb  fts5_wasm_dev.ipynb
docs/: Makefile  conf.py  configuration.rst  contributing.md  data.rst  database.rst  environment.yaml  ia.rst  index.md  index.rst  inventory.rst  io.rst  license.md  make.bat  metadata.rst  method.rst  querying.rst  requirements.txt  technical.rst  utils.rst
docs/content/: contributing.md  events_and_changes.md
tests/: __init__.py  activity_proxy.py  base.py  compatibility.py  config.py  conftest.py  data_store.py  database.py  database_parameters.py  database_querying.py  exchange_proxy.py  fixtures.py  geo.py  ia.py  iotable.py  json_database.py  naughty_strings.txt  parameters.py  pint_parameters.py  projects.py  search.py  serialization.py  single_file_database.py  sqlite.py  test_activity_proxy.py  test_add_scenario_table.py  test_base.py  test_config.py  test_copy_activities.py  test_create_aggregated_process.py  test_data_store.py  test_database_querying.py  test_exchange_proxy.py  test_get_id_cache.py  test_iotable.py  test_schema_migrations.py  test_signals.py  test_utils.py  updates.py  utils.py  (+1 more)
tests/fixtures/: __init__.py  naughty_strings.txt  projects.db
tests/graph/: test_graph.py
tests/unit/: test_activity_parameter_events.py  test_database_events.py  test_database_parameter_events.py  test_edge_events.py  test_events.py  test_group.py  test_ia_datastore_events.py  test_node_edge_events.py  test_node_events.py  test_parameter_events.py  test_parameterized_exchange_events.py  test_project_parameter_events.py  test_schema_sourcing.py
tests/wurst_extraction/: extraction.py  fixtures.py  test_extraction.py
