[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bw2data"
authors = [
  { name="Chris Mutel", email="cmutel@gmail.com" }
]
maintainers = [
  { name="Chris Mutel", email="cmutel@gmail.com" }
]
description = "Tools for the management of inventory databases and impact assessment methods. Part of the Brightway LCA framework."
readme = "README.md"
dynamic = ["version"]
# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering"
]
requires-python = ">=3.9"
dependencies = [
    "blinker",
    "bw2parameters",
    "bw_processing>=0.9.5",
    "fsspec",
    "lxml",
    "numpy<2",
    "peewee>=3.9.4",
    "platformdirs",
    "pydantic-settings",
    "rapidfuzz; sys_platform != 'emscripten'",
    "scipy",
    "stats_arrays",
    "tqdm",
    "voluptuous",
    "wrapt",
]

[project.urls]
source = "https://github.com/brightway-lca/bw2data"
homepage = "https://github.com/brightway-lca/bw2data"
tracker = "https://github.com/brightway-lca/bw2data/issues"

[project.optional-dependencies]
# Getting recursive dependencies to work is a pain, this
# seems to work, at least for now
testing = [
    "bw2data",
    "bw2calc>=2.0.dev17",
    "pytest",
    "pytest-cov",
    "python-coveralls"
]
dev = [
    "build",
    "pre-commit",
    "pylint",
    "pytest",
    "pytest-cov",
    "pytest-randomly",
    "setuptools",
]

[tool.setuptools]
license-files = ["LICENSE"]
include-package-data = true
packages = ["bw2data"]

[tool.setuptools.dynamic]
version = {attr = "bw2data.__version__"}

[tool.pytest.ini_options]
addopts = "--cov bw2data --cov-report term-missing --verbose"
norecursedirs = [
    "dist",
    "build",
    ".tox"
]
testpaths = ["tests/*.py"]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 100
extend_ignore = ["E203", "W503"]
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude = [
    ".tox",
    "build",
    "dist",
    ".eggs",
    "docs/conf.py",
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
