[metadata]
name = bw2data
version = file: bw2data/VERSION
description = Tools for the management of inventory databases and impact assessment methods. Part of the Brightway2 LCA Framework.
author = Chris Mutel
maintainer = Chris Mutel
maintainer_email = <cmutel@gmail.com>
author_email = <cmutel@gmail.com>
license = BSD-3-Clause
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
keywords= "brightway", "development"
url = https://github.com/brightway-lca/brightway2-data
project_urls =
	source = https://github.com/brightway-lca/brightway2-data
	homepage = https://github.com/brightway-lca/brightway2-data
	tracker = https://github.com/brightway-lca/brightway2-data/issues

platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Visualization


[options]
zip_safe = False
packages = find_namespace:
include_package_data = False
package_dir =
    =.

python_requires = >=3.9

install_requires =
    bw-processing
    bw-projects >=2.0.1
    bw2parameters
    lxml
    numpy
    peewee >=3.9.4
    platformdirs
    scipy
    stats_arrays
    tqdm
    voluptuous
    whoosh
    wrapt

[options.packages.find]
where = .
exclude =
    tests

[options.extras_require]
testing =
    bw2io
    bw2calc >=2.0.dev13
    pytest
    pytest-cov
    python-coveralls
    setuptools

dev =
    pre-commit
    pylint

[tool:pytest]
addopts =
   --verbose
   --cov bw2data --cov-report term-missing

norecursedirs =
    dist
    build
    .tox

testpaths =
    tests

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py
